# lib-rs

./: Cargo.toml  LICENSE  rust-toolchain  update  verify
crates/abs-diff/: Cargo.toml
crates/abs-diff/src/: lib.rs
crates/bisect/: Cargo.toml
crates/bisect/src/: lib.rs
crates/chmax/: Cargo.toml
crates/chmax/src/: lib.rs
crates/chmin/: Cargo.toml
crates/chmin/src/: lib.rs
crates/clamp/: Cargo.toml
crates/clamp/src/: lib.rs
crates/ext-gcd/: Cargo.toml
crates/ext-gcd/src/: lib.rs
crates/fenwick-tree/: Cargo.toml
crates/fenwick-tree/src/: lib.rs
crates/gcd-lcm/: Cargo.toml
crates/gcd-lcm/src/: lib.rs
crates/iterex-counts/: Cargo.toml
crates/iterex-counts/src/: lib.rs
crates/macro-forward-ref-binop/: Cargo.toml
crates/macro-forward-ref-binop/src/: lib.rs
crates/macro-matrix/: Cargo.toml
crates/macro-matrix/src/: lib.rs
crates/macro-min/src/: lib.rs
crates/macro_max/: Cargo.toml
crates/macro_max/src/: lib.rs
crates/macro_min/: Cargo.toml
crates/modint/: Cargo.toml
crates/modint/src/: lib.rs  modulus.rs
crates/monoid/: Cargo.toml
crates/monoid/src/: lib.rs  types.rs
crates/monoid/src/types/: add.rs  bit_and.rs  bit_or.rs  bit_xor.rs  max.rs  min.rs  mod.rs  mul.rs
crates/multiset-btree/: Cargo.toml
crates/multiset-btree/src/: difference.rs  intersection.rs  into_iter.rs  iter.rs  lib.rs  merge_iter.rs  range.rs  symmetric_difference.rs  union.rs
crates/neighbor4/: Cargo.toml
crates/neighbor4/src/: lib.rs
crates/neighbor8/: Cargo.toml
crates/neighbor8/src/: lib.rs
crates/num-traits/: Cargo.toml
crates/num-traits-all-bit-one/: Cargo.toml
crates/num-traits-all-bit-one/src/: lib.rs
crates/num-traits-bounded/: Cargo.toml
crates/num-traits-bounded/src/: lib.rs
crates/num-traits-macro-impl-id/: Cargo.toml
crates/num-traits-macro-impl-id/src/: lib.rs
crates/num-traits-one/: Cargo.toml
crates/num-traits-recip/: Cargo.toml
crates/num-traits-zero/: Cargo.toml
crates/rational/: Cargo.toml
crates/segment-tree/: Cargo.toml
crates/unionfind/: Cargo.toml
src/: binary_indexed_tree.rs  extends.rs  lib.rs  macros.rs  math.rs  structs.rs  tools.rs
src/extends/: iterator.rs  ord.rs
src/macros/: chmin_chmax.rs  direction.rs  matrix.rs  multi_minmax.rs  print_answer.rs
src/math/: gcd_lcm.rs  group.rs  math_structs.rs  mod.rs  mod_iterator.rs  modint.rs  monoid.rs  multiset.rs  num.rs  prime.rs  rational.rs  semigroup.rs  structs.rs
src/structs/: binary_indexed_tree.rs  bit.rs  mod.rs  segment_tree.rs  segmented_tree.rs  union_find.rs
src/tools/: abs_pow.rs  abs_sub.rs  bisect.rs  iter_extends.rs  macros.rs  matrix_ops.rs  min_max.rs  mod.rs  mod_pow.rs  option_ord.rs
verify/atcoder/: Cargo.toml  compete.toml
verify/atcoder/testcases/: typical_algorithm_a.yml  unionfind_a.yml  zone2021_c.yml
(+47 files in other folders)
