[package]
name = "sgthr7-lib-monoid"
version = "0.1.0"
edition = "2018"
authors = ["SGThr7 <sgthr7@gmail.com>"]
license = "MIT"

[lib]
name = "monoid"

[dependencies]
sgthr7-lib-num-traits-zero = { path = "../num-traits-zero" }
sgthr7-lib-num-traits-one = { path = "../num-traits-one" }
sgthr7-lib-num-traits-recip = { path = "../num-traits-recip" }
sgthr7-lib-num-traits-bounded = { path = "../num-traits-bounded" }
sgthr7-lib-num-traits-all-bit-one = { path = "../num-traits-all-bit-one" }
